2013-04-25  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* data/rsg/agent/nao/nao_hetero.rsg: 
	* plugin/soccer/agentstate/agentstate.h: 
	* plugin/soccer/agentstate/agentstate.cpp: 
	* plugin/soccer/agentstate/agentstate_c.cpp: 
	- added robot type to agent state

2012-11-25  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* data/rsg/agent/nao/nao_hetero.rsg: 
	- nao_hetero.rsg can be used to create different variants of Nao robot
	- nao.rsg a compatbility scene to create default Nao type (type 0)
	
	* rcssserver3d/naorobottypes.rb: 
	* rcssserver3d/naosoccersim.rb: 
	* rcssserver3d/CMakeLists.txt: 
	- added naorobottypes.rb to initialize Nao heterogeneous robot parameters

2012-06-21  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp: 
	- let a player kick the ball more than once in kickoff if there are not 
	  more than 2 players inside the game. Should be removed when a proper 
	  "Penalty mode" is added to the simulator
	- small cleanup: call SoccerBase::GetGameControlServer() to access 
	  game control server 

2012-05-23  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* NEWS: 
	* RELEASE: 
	- updated for 0.6.6
	
	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp: 
	- do not allow direct goals from kickoff
	- do not let the kickoff taker to kick the ball again befor other players

2012-05-22  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/soccer/gamestateaspect/gamestateaspect.cpp: 
	* plugin/soccer/gamestateaspect/gamestateaspect.h:
	- added knowledge about a 'paused' state, in which game is not really 
	  running (waiting for the referee to allow the game to continue, e.g. in
	  goal left/right state or at the beginning of a kick in state)
	
	* plugin/soccer/soccerruleaspect/soccerruleaspect.h:
	- a little cleanup, and fixed comment for mAutoKickOffTimeOrigin
	- removed an unused variable mLastValidBallPosition

	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp:
	- update game's paused state 