@@ -98,6 +98,7 @@
         (nd RestrictedVisionPerceptor
             (setViewCones 120 120)
             (setSenseMyPos false)
+            (setSenseMyOrien false)
             (setSenseBallPos false)
             (setStaticSenseAxis false)
             (addNoise true)
