@@ -1,3 +1,11 @@
+2013-06-06  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
+
+	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.h: 
+	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.cpp: 
+	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor_c.cpp: 
+	* data/rsg/agent/nao/naoneckhead.rsg: 
+	- Add MyOrientation sensing by Patrick (setSenseMyOrien in rsg file)
+	
 2013-04-25  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
 
 	* data/rsg/agent/nao/nao_hetero.rsg: 
